Udaan Weather Forecast

--- a/templates/after_sunny.html
+++ b/templates/after_sunny.html
@@ -26,25 +26,31 @@
     <h4><center> {{day}} is going to be <span style="font-style: italic; font-weight: bolder;">clear day! <br> </span> {{sentense}} </center></h4>
 
 
-<!--        <div class="container" style="display:flex;justify-content:center">-->
-<!--          <div class="row" >-->
-<!--            <div class="col">-->
-<!--              -->
-<!--            </div>-->
-<!--              <br>-->
-<!--            <div class="col">-->
-<!--              Pressure: {{pressure}}hPa-->
-<!--            </div>-->
-<!--            <br>-->
-<!--            <div class="col">-->
-<!--              Humidity :  {{humidity}}%-->
-<!--            </div>-->
-<!--              <br>-->
-<!--            <div class="col">-->
-<!--              Clouds: {{clouds}}%-->
-<!--            </div>-->
-<!--            </div>-->
-<!--        </div>-->
+        <div class="container" style="display:flex;justify-content:center">
+
+          <div class="row" >
+                        <h3 style="display:flex;justify-content:center">Today's weather</h3>
+            <div class="col">
+               <b> Sunrise </b>: {{sunrise}}
+            </div>
+              <br>
+              <div class="col">
+               <b> Sunset </b>: {{sunset}}
+            </div>
+              <br>
+            <div class="col">
+                <b>Pressure</b>: {{pressure}}hPa
+            </div>
+            <br>
+            <div class="col">
+                <b>Humidity</b> :  {{humidity}}%
+            </div>
+              <br>
+            <div class="col">
+                <b>Clouds </b>: {{clouds}}%
+            </div>
+            </div>
+        </div>
     <div>
     </div>
    </div>
