--- a/templates/after_rainy.html
+++ b/templates/after_rainy.html
@@ -25,25 +25,31 @@
     <h4><center> {{day}} is going to be <span style="font-style: italic; font-weight: bolder;">rainy day! <br> </span> So enjoy the rain with hot coffee and your comfy place!</center></h4>
 
 
-<!--        <div class="container" style="display:flex;justify-content:center">-->
-<!--          <div class="row" >-->
-<!--            <div class="col">-->
-<!--              City : -->
-<!--            </div>-->
-<!--              <br>-->
-<!--            <div class="col">-->
-<!--              Pressure: {{pressure}}hPa-->
-<!--            </div>-->
-<!--            <br>-->
-<!--            <div class="col">-->
-<!--              Humidity :  {{humidity}}%-->
-<!--            </div>-->
-<!--              <br>-->
-<!--            <div class="col">-->
-<!--              Clouds: {{clouds}}%-->
-<!--            </div>-->
-<!--            </div>-->
-<!--        </div>-->
+        <div class="container" style="display:flex;justify-content:center">
+
+          <div class="row" >
+            <h3 class="text-center"  style="display:flex;justify-content:center">Today's weather</h3>
+            <div class="col">
+                <b>Sunrise </b>: {{sunrise}}
+            </div>
+              <br>
+              <div class="col">
+               <b>Sunset</b>: {{sunset}}
+            </div>
+              <br>
+            <div class="col">
+                <b>Pressure </b>: {{pressure}}hPa
+            </div>
+            <br>
+            <div class="col">
+                <b>Humidity </b>:  {{humidity}}%
+            </div>
+              <br>
+            <div class="col">
+                <b>Clouds</b>: {{clouds}}%
+            </div>
+            </div>
+        </div>
     <div>
 
     </div>
