--- a/templates/after_rainy.html
+++ b/templates/after_rainy.html
@@ -13,10 +13,11 @@
 <body>
 
 <section id="prediction-form">
-  <nav class="navbar navbar-light bg-dark text-white" >
+  <nav class=" navbar-light bg-dark text-white" >
                  <a class="navbar-brand" href="#" style="justify-content:center;display:flex">
-                     <img src="https://lh3.googleusercontent.com/fife/AAWUweWtF7VtksQbfiDQUIaNH85i9U7PqZkXE8gqann90U194aa51xdNXdsJdh3eiPgMmnWTTH90KYzBi0WX8YCN8OIRSVDe0bnfL7BXUw-E8lIJxgl2ZLOAtTyNnds8u9DO3LZCCov42N2gHG1TLieHXo7tt0Os-KFbOgP4Uh6flWIhed2n4MPgzMkh0kfCIFf4tPhb9GMCApvwxSlwPqxzWMGZITFvYmG1VL1Ot9aCFnjiBKfmbqkXUYo21gaLF0y23bzpSqbW15xD9mFqPx9RJLAk9_wklRdIGPCaFvKLZGfims0au6cUtfccDJ6yyv0sPjfQbxFylXs4Qla4mqSg5LBtZRSmZzh5spFbDcVB_tMTO68LO8hei6LgNuEz2N5cqZPCUQDYdCghOJm9EFk7ax-TNAx0ceJQA6B2w9bJCERMBoTb7Kosk_XfSxVIzVyJj6bnD_YDD8fPvlrW8zrXEVzBg0jxxQSJdBB7onbUp38paD3kIQK4I8---GCBmu_41I1-cGKn93PLSi6BTO6x7quNvZkZVQKk0Gb-IVOP3e8jgVBbOP3pQii3S1OQh5vKFG6CX0oMFRqdmCTtpewp06x9XScEtHNUFtMGt9XDhLmsnDpXrLYtvSkyk9uIhm3BZd9xxlXoSGSM2c9Ty9Z--S6REoCZwavmCX7NYBdEHpCmYGrxT_YpaQlmApnSPBg2VokTsb8SxIaJC5VOTVTcIflrLY5zvjypE3Q=w1920-h913-ft" width="100" height="100" alt="" loading="lazy">
+                     <!-- <img src="https://lh3.googleusercontent.com/fife/AAWUweWtF7VtksQbfiDQUIaNH85i9U7PqZkXE8gqann90U194aa51xdNXdsJdh3eiPgMmnWTTH90KYzBi0WX8YCN8OIRSVDe0bnfL7BXUw-E8lIJxgl2ZLOAtTyNnds8u9DO3LZCCov42N2gHG1TLieHXo7tt0Os-KFbOgP4Uh6flWIhed2n4MPgzMkh0kfCIFf4tPhb9GMCApvwxSlwPqxzWMGZITFvYmG1VL1Ot9aCFnjiBKfmbqkXUYo21gaLF0y23bzpSqbW15xD9mFqPx9RJLAk9_wklRdIGPCaFvKLZGfims0au6cUtfccDJ6yyv0sPjfQbxFylXs4Qla4mqSg5LBtZRSmZzh5spFbDcVB_tMTO68LO8hei6LgNuEz2N5cqZPCUQDYdCghOJm9EFk7ax-TNAx0ceJQA6B2w9bJCERMBoTb7Kosk_XfSxVIzVyJj6bnD_YDD8fPvlrW8zrXEVzBg0jxxQSJdBB7onbUp38paD3kIQK4I8---GCBmu_41I1-cGKn93PLSi6BTO6x7quNvZkZVQKk0Gb-IVOP3e8jgVBbOP3pQii3S1OQh5vKFG6CX0oMFRqdmCTtpewp06x9XScEtHNUFtMGt9XDhLmsnDpXrLYtvSkyk9uIhm3BZd9xxlXoSGSM2c9Ty9Z--S6REoCZwavmCX7NYBdEHpCmYGrxT_YpaQlmApnSPBg2VokTsb8SxIaJC5VOTVTcIflrLY5zvjypE3Q=w1920-h913-ft" width="100" height="100" alt="" loading="lazy"> -->
                  </a>
+
                 </nav>
 
 
