--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-     <title> Udaan : Weather Predictor</title>
+     <title> Airavata : Weather Predictor</title>
 
     <link href="https://lh3.googleusercontent.com/fife/AAWUweWtF7VtksQbfiDQUIaNH85i9U7PqZkXE8gqann90U194aa51xdNXdsJdh3eiPgMmnWTTH90KYzBi0WX8YCN8OIRSVDe0bnfL7BXUw-E8lIJxgl2ZLOAtTyNnds8u9DO3LZCCov42N2gHG1TLieHXo7tt0Os-KFbOgP4Uh6flWIhed2n4MPgzMkh0kfCIFf4tPhb9GMCApvwxSlwPqxzWMGZITFvYmG1VL1Ot9aCFnjiBKfmbqkXUYo21gaLF0y23bzpSqbW15xD9mFqPx9RJLAk9_wklRdIGPCaFvKLZGfims0au6cUtfccDJ6yyv0sPjfQbxFylXs4Qla4mqSg5LBtZRSmZzh5spFbDcVB_tMTO68LO8hei6LgNuEz2N5cqZPCUQDYdCghOJm9EFk7ax-TNAx0ceJQA6B2w9bJCERMBoTb7Kosk_XfSxVIzVyJj6bnD_YDD8fPvlrW8zrXEVzBg0jxxQSJdBB7onbUp38paD3kIQK4I8---GCBmu_41I1-cGKn93PLSi6BTO6x7quNvZkZVQKk0Gb-IVOP3e8jgVBbOP3pQii3S1OQh5vKFG6CX0oMFRqdmCTtpewp06x9XScEtHNUFtMGt9XDhLmsnDpXrLYtvSkyk9uIhm3BZd9xxlXoSGSM2c9Ty9Z--S6REoCZwavmCX7NYBdEHpCmYGrxT_YpaQlmApnSPBg2VokTsb8SxIaJC5VOTVTcIflrLY5zvjypE3Q=w1920-h913-ft" rel="shortcut icon">
 
@@ -18,9 +18,9 @@
 </head>
 <body>
     <section id="prediction-form">
-                  <nav class="navbar navbar-light bg-dark text-white" style="justify-content:center">
+                  <nav class="navbar navbar-light  text-white" style="justify-content:center">
                  <a class="navbar-brand" href="#">
-                     <img src="https://lh3.googleusercontent.com/fife/AAWUweWtF7VtksQbfiDQUIaNH85i9U7PqZkXE8gqann90U194aa51xdNXdsJdh3eiPgMmnWTTH90KYzBi0WX8YCN8OIRSVDe0bnfL7BXUw-E8lIJxgl2ZLOAtTyNnds8u9DO3LZCCov42N2gHG1TLieHXo7tt0Os-KFbOgP4Uh6flWIhed2n4MPgzMkh0kfCIFf4tPhb9GMCApvwxSlwPqxzWMGZITFvYmG1VL1Ot9aCFnjiBKfmbqkXUYo21gaLF0y23bzpSqbW15xD9mFqPx9RJLAk9_wklRdIGPCaFvKLZGfims0au6cUtfccDJ6yyv0sPjfQbxFylXs4Qla4mqSg5LBtZRSmZzh5spFbDcVB_tMTO68LO8hei6LgNuEz2N5cqZPCUQDYdCghOJm9EFk7ax-TNAx0ceJQA6B2w9bJCERMBoTb7Kosk_XfSxVIzVyJj6bnD_YDD8fPvlrW8zrXEVzBg0jxxQSJdBB7onbUp38paD3kIQK4I8---GCBmu_41I1-cGKn93PLSi6BTO6x7quNvZkZVQKk0Gb-IVOP3e8jgVBbOP3pQii3S1OQh5vKFG6CX0oMFRqdmCTtpewp06x9XScEtHNUFtMGt9XDhLmsnDpXrLYtvSkyk9uIhm3BZd9xxlXoSGSM2c9Ty9Z--S6REoCZwavmCX7NYBdEHpCmYGrxT_YpaQlmApnSPBg2VokTsb8SxIaJC5VOTVTcIflrLY5zvjypE3Q=w1920-h913-ft" width="100" height="100" alt="" loading="lazy">
+                     <img src="//live.staticflickr.com/65535/52129089689_7fc3117b64_b.jpg"  height="100" alt="" loading="lazy">
                  </a>
                 <h3 class="text-center">{{pred}}</h3>
                 </nav>
@@ -68,7 +68,7 @@
 <!--                    </div>-->
 <!--                </div>-->
                 <div class="col-md-6 my-5 d-flex align-items-end justify-content-around">
-                    <button type="submit" class="btn btn-info btn-block" style="margin-left: 100%;">Predict</button>
+                    <button type="submit" class="btn btn-block text-white" style="margin-left: 100%; background-color: #229CD7;">Predict</button>
                 </div>
             </div>
         </form>
